Fix FAB's Z-Index so that it will not overflow Dialogs

--- a/client/sass/appsContainer.scss
+++ b/client/sass/appsContainer.scss
@@ -1,7 +1,7 @@
 .fixed-floating-btn {
   padding-top: 15px;
   margin-bottom: 0;
-  z-index: 100000;
+  z-index: 1000;
   position: fixed;
   right: 40px;
   bottom: 25px;
